tests/sksl/errors/UseWithoutInitializeDeadIf.glsl

void dead_if() {
    int x;
    x++;
}
